<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.welcome.WelcomeActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="308dp"
        android:layout_height="72dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="268dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/titleTextView"
        android:alpha="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/basic"
        android:text="@string/title_welcome"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/descTextView"
        android:alpha="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/basic"
        android:text="@string/description"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/titleTextView"
        app:layout_constraintStart_toStartOf="@+id/titleTextView"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <Button
        android:id="@+id/loginButton"
        android:alpha="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/blue_700"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="@+id/descTextView"
        app:layout_constraintTop_toBottomOf="@+id/descTextView" />

    <Button
        android:id="@+id/signupButton"
        android:alpha="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/blue_700"
        android:text="@string/signup"
        app:layout_constraintEnd_toEndOf="@+id/descTextView"
        app:layout_constraintTop_toBottomOf="@+id/descTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>