<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".view.addstory.AddStoryActivity">

        <ImageView
            android:id="@+id/previewImageView"
            android:alpha="0"
            android:layout_width="332dp"
            android:layout_height="381dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_place_holder"
            android:contentDescription="@string/preview_image" />

        <Button
            android:id="@+id/cameraButton"
            android:alpha="0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="50dp"
            android:text="@string/camera"
            android:backgroundTint="@color/blue_700"
            app:layout_constraintEnd_toStartOf="@+id/galleryButton"
            app:layout_constraintStart_toStartOf="@+id/previewImageView"
            app:layout_constraintTop_toBottomOf="@+id/previewImageView" />

        <Button
            android:id="@+id/galleryButton"
            android:alpha="0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/gallery"
            android:backgroundTint="@color/blue_700"
            app:layout_constraintEnd_toEndOf="@+id/previewImageView"
            app:layout_constraintTop_toBottomOf="@+id/previewImageView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descEditTextLayout"
            android:alpha="0"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/add_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cameraButton">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_add_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cameraButton" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_add"
            android:alpha="0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/blue_700"
            android:text="@string/upload"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descEditTextLayout" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>